MESSAGE("Generating Makefile for RaytracerTest project")

FILE(GLOB RT_TESTS_SOURCES *.cpp)
FILE(GLOB_RECURSE RT_TESTS_EXTERNAL_SOURCES ../External/googletest/*.cc)
FILE(GLOB RT_TESTS_HEADERS *.h)

# Search for dependencies
# PKG_CHECK_MODULES(RT_TESTS_DEPS REQUIRED)

INCLUDE_DIRECTORIES(${RT_TESTS_DIRECTORY}/ ${RT_ROOT_DIRECTORY}/External/googletest/include/ ${RT_ROOT_DIRECTORY}/External/googletest/)
LINK_DIRECTORIES(${RT_LIB_DIRECTORY} ${NFE_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(RaytracerTest ${RT_TESTS_SOURCES} ${RT_TESTS_HEADERS} ${RT_TESTS_EXTERNAL_SOURCES} ${RT_TESTS_LINUX_SOURCES})
SET_TARGET_PROPERTIES(RaytracerTest PROPERTIES LINK_FLAGS "-pthread")

TARGET_PRECOMPILE_HEADERS(RendererTest PRIVATE PCH.hpp)

ADD_DEPENDENCIES(RaytracerTest Core)
TARGET_LINK_LIBRARIES(RaytracerTest Core dl ${RT_TESTS_DEPS_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET RaytracerTest POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RaytracerTest> ${NFE_OUTPUT_DIRECTORY}/${targetfile})
