MESSAGE(STATUS "Generating build files for RaytracerTest project")

SET(RT_TESTS_SOURCES
    PCH.cpp
    Main.cpp
    BitmapTest.cpp
    HashGridTest.cpp
    KdTreeTest.cpp
    MathDistributionTest.cpp
    RaytracingTests.cpp
)

SET(RT_TESTS_HEADERS
    PCH.h
)

ADD_EXECUTABLE(RaytracerTest ${RT_TESTS_SOURCES} ${RT_TESTS_HEADERS} ${RT_TESTS_EXTERNAL_SOURCES} ${RT_TESTS_LINUX_SOURCES})

TARGET_INCLUDE_DIRECTORIES(RaytracerTest
    PRIVATE ${RT_TESTS_DIRECTORY}
    PRIVATE ${NFEDEPS_ROOT_DIRECTORY}
)

TARGET_LINK_DIRECTORIES(RaytracerTest
    PRIVATE ${RT_LIB_DIRECTORY}
    PRIVATE ${NFE_OUTPUT_DIRECTORY}
)

SET_TARGET_PROPERTIES(RaytracerTest PROPERTIES LINK_FLAGS "-pthread")

TARGET_PRECOMPILE_HEADERS(RaytracerTest PRIVATE PCH.hpp)

ADD_DEPENDENCIES(RaytracerTest Core)

TARGET_LINK_LIBRARIES(RaytracerTest Core ${RT_TESTS_DEPS_LIBRARIES})

ADD_CUSTOM_COMMAND(TARGET RaytracerTest POST_BUILD COMMAND
    ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RaytracerTest> ${NFE_OUTPUT_DIRECTORY}
)
