# @file
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  CMake for nfRendererOGL4

MESSAGE("Generating Makefile for nfRendererOGL4")

FILE(GLOB NFRENDEREROGL4_SOURCES        *.cpp)
FILE(GLOB NFRENDEREROGL4_HEADERS        *.hpp)
FILE(GLOB NFRENDEREROGL4_LINUX_SOURCES  Linux/*.cpp)
FILE(GLOB NFRENDEREROGL4_LINUX_HEADERS  Linux/*.hpp)

# Windows DllMain definition
IF(NOT WIN32)
    LIST(REMOVE_ITEM NFRENDEREROGL4_SOURCES "${NFRENDEREROGL4_DIRECTORY}/Main.cpp")
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${NFE_ROOT_DIRECTORY}/nfEngineDeps/ ${NFCOMMON_DIRECTORY})

ADD_LIBRARY(nfRendererOGL4 SHARED
            ${NFRENDEREROGL4_SOURCES} ${NFRENDEREROGL4_HEADERS}
            ${NFRENDEREROGL4_LINUX_SOURCES} ${NFRENDEREROGL4_LINUX_HEADERS})

ADD_CUSTOM_COMMAND(TARGET nfRendererOGL4 POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:nfRendererOGL4> ${NFE_OUTPUT_DIRECTORY}/${targetfile})
